# real-car-adasmonitor

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  RunTests[1]_include.cmake  RunTests[1]_tests.cmake  cmake_install.cmake  exports.txt  prepareData.py
docs/: architecture.md
models/: driver_classifier.onnx.data  normalization_params.json
onnx_wrapper/: CMakeLists.txt  onnx_wrapper.def  wrapper.cpp  wrapper.h
src/: dashboard.cpp  dashboard.h  main.cpp  main_one_to_four.cpp  obd_parser.cpp  obd_parser.h  onnx_classifier_wrapper.cpp  onnx_classifier_wrapper.h  onnx_wrapper.h
tests/: test_obd_parser.cpp
